# opensincera-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/opensincera/: __init__.py  __main__.py  _cli.py  _client.py  _formatters.py  _models.py  errors.py
tests/: test_cli.py  test_client.py  test_errors.py  test_formatters.py  test_models.py  test_version.py
