[project]
name = "opensincera-python"
version = "0.1.0"
description = "Python client, CLI, and MCP server for The Trade Desk's OpenSincera advertising-metadata API"
readme = "README.md"
authors = [
    { name = "Sibi", email = "rsibi93@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "opensincera"
