[project]
name = "opensincera-python"
version = "0.1.0"
description = "Python client, CLI, and MCP server for The Trade Desk's OpenSincera advertising-metadata API"
readme = "README.md"
authors = [
    { name = "Sibi", email = "rsibi93@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "opensincera"
